Updated index.html and style.css - Added aria-hidden attribute with the value of true to the img tags. - Fixed overflowing of cards on some screen sizes by Increasing the width in media query break points

--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ section img {
     width: 23%;
 }
 
-@media  (min-width : 800px){
+@media  (min-width : 1250px){
     h1 {
         font-size: 2.25rem;
         margin-bottom: 1rem;
